# Programmable-Cryptography-CAMCOS

./: .gitignore  README.md  function-graphs.ipynb  pyproject.toml  requirements.txt  setup.py
FHE/: README.md  cypher_text.py  fhe_correlation_coefficient.py  fhe_lib.py  fhe_mean.py  fhe_test.py  good_if.py  mode.py  moment_generator.py
src/fhelib/: __init__.py  ciphertext.py  fhe_lib.py
src/fhelib/algorithms/: difference.py  matrix_multiplication.py  product.py  sum.py
src/fhelib/auxiliary/: difference.py  difference_matrix.py  division.py  eqaulity.py  equality.py  exponential.py  exponentiate.py  index_swap.py  max.py  reciprocal.py  reciprocal_adpt_guess.py  reciprocal_univ_guess.py  softmax.py
src/fhelib/basic/: add.py  conjugate.py  cycle.py  multiply.py
src/fhelib/illegal/: il_difmat.py  il_division.py
src/fhelib/lowlevel/: __init__.py  div_initguess.py  div_newton.py  dot_product.py  factorial.py  matrix_multiplication.py  power.py  product.py  realify.py  sigmoid.py  sign.py  sub.py  sum.py  tanh.py
tests/: __main__.py  ciphertext_test.py  conjugate_test.py  diff_matrix_test.py  difference_test.py  division_test.py  equality_test.py  factorial_test.py  fhe_test.py  heaviside_test.py  index_swap_test.py  levels_test.py  main.py  matrix_multiplication_test.py  median_test.py  mode_test.py  multiply_test.py  newton_iterations.py  product_test.py  realify_test.py  reciprocal_test.py  reciprocal_test_2.py  sigmoid_convergence.py  sigmoid_test.py  sign_tanh_test.py  sign_test.py  sign_test_2.py  softmax_test.py  stats_test.py  tanh_test.py  test_test.py
(+13 files in other folders)
